implementação de text shadow para as frases melhorias no layout de criação de estilos

--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -69,6 +69,16 @@
                 tools:visibility="visible" />
         </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/stylePreviewRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/save_quote_button"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="1"
+            tools:listitem="@layout/style_preview_card" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/save_quote_button"
             android:layout_width="match_parent"
