--- a/base/src/main/res/layout/quotes_card.xml
+++ b/base/src/main/res/layout/quotes_card.xml
@@ -46,6 +46,10 @@
                 android:autoSizeMaxTextSize="@dimen/big_quote_size"
                 android:autoSizeMinTextSize="@dimen/min_quote_size"
                 android:breakStrategy="high_quality"
+                android:shadowColor="@color/md_black"
+                android:shadowDx="10"
+                android:shadowDy="0"
+                android:shadowRadius="1"
                 android:textAlignment="center"
                 android:textSize="@dimen/big_quote_size"
                 android:textStyle="bold"
