--- a/manager/src/main/res/drawable/round_select.xml
+++ b/manager/src/main/res/drawable/round_select.xml
@@ -3,16 +3,16 @@
 
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/radius_default" />
-            <stroke android:width="2dp" android:color="?android:textColorPrimary" />
+            <corners android:radius="@dimen/radius_small" />
+            <stroke android:width="1dp" android:color="?android:textColorPrimary" />
             <solid android:color="?attr/dividerColor" />
 
         </shape>
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/radius_default" />
-            <stroke android:width="2dp" android:color="?android:textColorPrimary" />
+            <corners android:radius="@dimen/radius_small" />
+            <stroke android:width="1dp" android:color="?android:textColorPrimary" />
             <solid android:color="?android:textColorPrimary" />
 
         </shape>
