--- a/base/src/main/res/drawable/round_top.xml
+++ b/base/src/main/res/drawable/round_top.xml
@@ -18,6 +18,6 @@
 
 
     <!-- Background color -->
-    <solid android:color="?android:colorBackground" />
+    <solid android:color="?attr/dividerColor" />
 
 </shape>
