--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <!-- my colors -->
     <color name="colorPrimary">#673AB7</color>
     <color name="colorPrimaryDark">#512DA8</color>
-    <color name="colorAccent">#7C4DFF</color>
+    <color name="colorAccent">#B39DDB</color>
     <color name="white">#FFFFFF</color>
     <color name="oblack">#1A000000</color>
     <color name="transparent">#00ffffff</color>
