--- a/base/src/main/res/drawable/defaultdot.xml
+++ b/base/src/main/res/drawable/defaultdot.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="4dp"
             android:useLevel="false">
-            <solid android:color="?android:textColorHint" />
+            <solid android:color="@color/white" />
 
         </shape>
     </item>
